# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "sawtooth-sawadm"
version = "0.1.0"
authors = ["sawtooth"]
description = "The sawadm command is used for Sawtooth administration tasks."

[[bin]]
name = "sawadm"
path = "src/main.rs"

[dependencies]
clap = ">=2.29.0"
libc = ">=0.2.35"
lmdb-zero = ">=0.4.1"
protobuf = "2.0"
sawtooth-sdk = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[build-dependencies]
glob = "0.3"
protoc-rust = "2.0"

[package.metadata.deb]
name = "sawtooth-sawadm"
maintainer = "sawtooth"
license-file = ["../LICENSE", "0"]
extended-description = """\
The sawadm subcommands create validator keys during initial configuration,\
help create the genesis block when initializing a validator, and manage the blockstore database."""
depends = "$auto"
section = "admin"
maintainer-scripts = "packaging/ubuntu"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]
