# Copyright 2019 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sawtooth"
version = "0.3.0"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Hyperledger Sawtooth is an enterprise blockchain platform for building \
    distributed ledger applications and networks.
"""

[dependencies]
cbor-codec = { version = "0.7", optional = true }
hex = { version = "0.4", optional = true }
log = "0.4"
lmdb-zero = { version = "0.4", optional = true }
openssl = { version = "0.10", optional = true }
protobuf = "2"
redis = { version = "0.13.0", default-features = false, optional = true }
transact = "0.2"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "btree-store",
    "lmdb-store",
    "receipt-store",
    "redis-store",
    "stores",
    "validator-internals",
]

btree-store = ["stores"]
lmdb-store = ["lmdb-zero", "stores"]
receipt-store = ["stores"]
redis-store = ["redis", "stores"]
stores = []
validator-internals = ["cbor-codec", "hex", "lmdb-zero", "openssl"]

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"

[dev-dependencies]
rand = "0.4"
