[package]
name = "sawtooth_validator"
version = "1.99.1"
authors = ["Intel Corporation"]

[dependencies]
clap = "2"
cpython = "0.2"
cylinder = "0.2"
hex = "0.3"
log = { version = "0.4", features = ["std"] }
libc = ">=0.2.35"
metrics = { version = "0.12", features = ["std"] }
protobuf = "2.23"
python3-sys = "0.2"
sawtooth = { version = "0.6", features = ["validator-internals"] }
transact = { version = "0.3", features = ["sawtooth-compat"] }


# pull in smart contracts
sawtooth-settings-tp = {path = "../families/settings/sawtooth_settings"}
sawtooth-block-info-tp = {path = "../families/block_info/sawtooth_block_info"}
battleship = {path = "../families/battleship/"}
sawtooth-identity-tp = {path = "../families/identity/sawtooth_identity"}
sawtooth-smallbank-tp-rust = {path = "../families/smallbank/smallbank_rust"}
sawtooth-sabre = "0.6"
sawtooth-intkey = "0.5"
sawtooth-xo = "0.5"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "sawtooth-validator"
path = "src/main.rs"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]
