# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "sawtooth-intkey-workload"
version = "0.1.0"
authors = ["Intel Corporation"]

[[bin]]
name = "intkey-workload"
path = "./src/main.rs"

[dependencies]
cbor-codec = "0.7.1"
clap = "2.30"
log = "0.4"
protobuf = "2.0"
rand = "0.4"
rust-crypto = "^0.2"
sawtooth_perf = { path = "../sawtooth_perf" }
sawtooth_sdk = { path = "../../sdk/rust" }
simplelog = "0.5"
