# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------
[package]
name = "sawtooth_perf"
version = "0.1.0"
authors = ["Intel Corporation"]

[dependencies]
sawtooth-sdk = { path = "../../sdk/rust" }
chrono = "0.4"
protobuf = "2.0"
futures = "0.1"
hyper = "0.11"
rand = "0.4"
tokio-core = "0.1"
tokio-timer = "0.1"
log = "0.4"
