[package]
name = "smallbank_workload"
version = "0.1.0"

[dependencies]
sawtooth_sdk = { path = "../../sdk/rust" }
sawtooth_perf = { path = "../sawtooth_perf" }
protobuf = "1.4.1"
clap = "2.26.0"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
tokio-timer = "0.1"
yaml-rust = "0.3.5"
rand = "0.3.16"
rust-crypto = "0.2.36"
