# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------
[package]
name = "sawtooth-smallbank-workload"
version = "0.1.0"
build = "build.rs"
authors = ["Intel Corporation"]

[dependencies]
sawtooth-sdk = { path = "../../sdk/rust" }
sawtooth_perf = { path = "../sawtooth_perf" }
protobuf = "2.0"
clap = "2.26.0"
yaml-rust = "0.3.5"
rand = "0.3.16"
rust-crypto = "0.2.36"
env_logger = "0.5.3"

[[bin]]
name = "smallbank-workload"
path = "./src/main.rs"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"
