# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------
[package]
name = "sawtooth-smallbank-workload"
version = "0.1.0"
build = "build.rs"
authors = ["Intel Corporation"]
description = "Workload generator for Sawtooth Smallbank"

[dependencies]
sawtooth-sdk = "0.3"
sawtooth_perf = { path = "../sawtooth_perf" }
protobuf = "2"
clap = "2"
yaml-rust = "0.4"
rand = "0.6"
rust-crypto = "0.2.36"
env_logger = "0.6"

[[bin]]
name = "smallbank-workload"
path = "./src/main.rs"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]
