#
# Copyright 2018 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "sawtooth-block-info-tp"
version = "1.0.0"
authors = ["Bitwise IO"]
build = "build.rs"
description = "The Sawtooth Block Info transaction processor"

[package.metadata.deb]
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-block-info-tp.service",
    "/lib/systemd/system/sawtooth-block-info-tp.service", "644"],
    ["packaging/systemd/sawtooth-block-info-tp", "/etc/default/sawtooth-block-info-tp", "644"],
    ["target/release/block-info-tp", "/usr/bin/block-info-tp", "755"],
]
maintainer-scripts = "packaging/ubuntu"
conf-files = [
    "/lib/systemd/system/sawtooth-block-info-tp.service",
    "/etc/default/sawtooth-block-info-tp"
]

[[bin]]
name = "block-info-tp"
path = "./src/main.rs"

[dependencies]
clap = "2"
protobuf = "2.0"
cfg-if = "0.1"
hex = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-crypto-wasm = "0.3"
sabre-sdk = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sawtooth-sdk = "0.3"
rust-crypto = "0.2"
rustc-serialize = "0.3"
log = "0.4"
log4rs = "0.8"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]
