#
#  Copyright 2018 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "sawtooth_identity"
version = "0.1.0"
authors = ["Bitwise IO"]
build = "build.rs"

[[bin]]
name = "identity-tp"
path = "src/main.rs"

[dependencies]
cfg-if = "0.1"
clap = "2"
protobuf = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust_crypto = {git = "https://github.com/agunde406/rust-crypto", branch="wasm_sha2"}
sabre-sdk = {git = "https://github.com/hyperledger/sawtooth-sabre"}

[target.'cfg(unix)'.dependencies]
log = "0.3"
log4rs = "0.7"
rust-crypto = "0.2"
rustc-serialize = "0.3"
sawtooth-sdk = { git = "https://github.com/hyperledger/sawtooth-sdk-rust" }

[build-dependencies]
cfg-if = "0.1"
glob = "0.2"
protoc-rust = "2.0"

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-identity-tp.service",
    "/lib/systemd/system/sawtooth-identity-tp.service", "644"],
    ["packaging/systemd/sawtooth-identity-tp", "/etc/default/sawtooth-identity-tp", "644"],
    ["target/release/identity-tp", "/usr/bin/identity-tp", "755"],
]
maintainer-scripts = "packaging/ubuntu"
conf-files = [
    "/lib/systemd/system/sawtooth-identity-tp.service",
    "/etc/default/sawtooth-identity-tp"
]
