# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "rpc"
version = "0.1.0"
authors = ["sawtooth"]

[dependencies]
jsonrpc-core = "7.1.1"
jsonrpc-http-server = "7.1.1"
futures-cpupool = "0.1"
clap = "2.26"
protobuf="1.4.1"
sawtooth_sdk = { path = "../../../sdk/rust" }
uuid = { version = "0.5", features = ["v4"] }
log = "0.3.8"
simple-logging = "1.0.1"
