# Copyright 2018 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sawtooth-settings"
version = "0.1.0"
authors = ["Bitwise IO"]
build = "build.rs"
description = "The Sawtooth Settings transaction processor for validating on-chain settings."
license = "Apache-2.0"

[package.metadata.deb]
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-settings-tp.service",
    "/lib/systemd/system/sawtooth-settings-tp.service", "644"],
    ["packaging/systemd/sawtooth-settings-tp", "/etc/default/sawtooth-settings-tp", "644"],
    ["target/release/settings-tp", "/usr/bin/settings-tp", "755"],
]
maintainer-scripts = "packaging/ubuntu"
conf-files = [
    "/lib/systemd/system/sawtooth-settings-tp.service",
    "/etc/default/sawtooth-settings-tp"
]

[[bin]]
name = "settings-tp"
path = "./src/main.rs"

[dependencies]
cfg-if = "0.1"
clap = "2"
protobuf = "2.0"
base64 = "~0.6.0"
log = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust_crypto = {git = "https://github.com/agunde406/rust-crypto", branch="wasm_sha2"}
sabre-sdk = {git = "https://github.com/hyperledger/sawtooth-sabre"}

[target.'cfg(unix)'.dependencies]
sawtooth-sdk = { git = "https://github.com/hyperledger/sawtooth-sdk-rust" }
rust-crypto = "0.2"
rustc-serialize = "0.3"
log4rs = "0.7"


[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"
cfg-if = "0.1"
