#
# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "smallbank_rust"
version = "1.0.0"
authors = ["Intel Corporation"]
build = "build.rs"

[dependencies]
sawtooth-sdk = { path = "../../../sdk/rust" }
rust-crypto = "0.2"
rustc-serialize = "0.3"
clap = "2"
protobuf = "2.0"
log = "0.3"
log4rs = "0.7"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"
